samples/_failures_safe/1761431780_5d8fcb_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8aa17ec5.c: In function ‘tokenize’:
./samples/SAFE/__tmp_8aa17ec5.c:166:34: error: expected ‘;’ at end of input
  166 |         tokens[token_count].value
      |                                  ^
      |                                  ;
./samples/SAFE/__tmp_8aa17ec5.c:166:9: error: expected declaration or statement at end of input
  166 |         tokens[token_count].value
      |         ^~~~~~
./samples/SAFE/__tmp_8aa17ec5.c:166:9: error: expected declaration or statement at end of input
